--- a/demo9.html
+++ b/demo9.html
@@ -148,7 +148,7 @@
       var kernelLocation = gl.getUniformLocation(program, "u_kernel[0]");
       var kernelWeightLocation = gl.getUniformLocation(program, "u_kernelWeight");
 
-      // Define several convolution kernels
+      //定义几个卷积核
       var kernels = {
         normal: [
           0, 0, 0,
